--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gallery_react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jkriszta.github.io/gallery_react/",
+  "homepage": "https://jkriszta.github.io/react_gallery/",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
